2003-12-31  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/seqtab.cpp:
	* lib/seqtab.h:
	* lib/consttab.cpp:
	* lib/consttab.h:
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/list.cpp :
	* lib/list.h :

	  - Cleanup.

	* lib/expression.cpp :
	* lib/expression.h :

	  - Expression is now a list of facts, not atoms.

	* lib/Makefile.in :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Renamed atoms to facts.


2003-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Cleanups.

	* lib/Makefile.in :
	* lib/polbase.cpp :
	* lib/polbase.h :
 
	  - Added a policy base class. intended as a rewrite of the kb class.

2003-12-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Simplified class by defining an array of stringlists instead
	    of separately managing 6 individual stringlists.

	  - Identifier types now made separate from each other.

2003-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* rules.mk :
	* lib/Makefile.in : 
	* main/Makefile.in :

	  - Overhauled build system.

2003-08-27  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* rules.mk :

	  - Removed -Wnested-externs as some compilers do not accept such
	    option.

2003-08-22  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :

	  - Fixed kb::verify_transref() so that it will check whether the
	    "de-variable-ized" expressions are valid. This is a fix to prevent
	    invalid sequence additions.

2003-07-25  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :

	  - now query_generate() and compute_generate() will work anytime
	    after kb is closed.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Changed the way atoms are queried against the stable models.