@@ -15,15 +15,21 @@ class transdef : public list_item
   public :
     transdef();
     ~transdef();
-    bool cmp(list_item *item);
-    int get(char **n, stringlist **v, expression **pr, expression **po);
-    int init(const char *n, stringlist *v, expression *pr, expression *po);
+    bool cmp(list_item *a_item);
+    int get(char **a_name,
+            stringlist **a_vlist,
+            expression **a_precond,
+            expression **a_postcond);
+    int init(const char *a_name,
+             stringlist *a_vlist,
+             expression *a_precond,
+             expression *a_postcond);
   private :
-    char *name;
-    stringlist *vlist;
-    expression *precond;
-    expression *postcond;
-    bool initialised;
+    char *m_name;
+    stringlist *m_vlist;
+    expression *m_precond;
+    expression *m_postcond;
+    bool m_init;
 } ;
 
 class transtab : public list
@@ -31,17 +37,26 @@ class transtab : public list
   public :
     transtab();
     ~transtab();
-    int add(const char *n, stringlist *v, expression *pr, expression *po);
+    int add(const char *a_name,
+            stringlist *a_vlist,
+            expression *a_precond,
+            expression *a_postcond);
     /* get trans by name */
-    int get(const char *n, stringlist **v, expression **pr, expression **po);
+    int get(const char *a_name,
+             stringlist **a_vlist,
+             expression **a_precond,
+             expression **a_postcond);
     /* get trans by index */
-    int get(unsigned int i,
-            char **n,
-            stringlist **v,
-            expression **pr,
-            expression **po);
+    int get(unsigned int a_index,
+            char **a_name,
+            stringlist **a_vlist,
+            expression **a_precond,
+            expression **a_postcond);
     /* replace variables with identifiers in ilist, then get pr and pp */
-    int replace(const char *n, stringlist *ilist, expression **pr, expression **po);
+    int replace(const char *a_name,
+                stringlist *a_ilist,
+                expression **a_precond,
+                expression **a_postcond);
 } ;
 
 #endif
